Init new branch with Angular 18 upgrade changes

--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-application-submission-msg-dialog/dfa-application-submission-msg.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-application-submission-msg-dialog/dfa-application-submission-msg.component.html
@@ -15,7 +15,7 @@
     </p>
     <ul>
       <li>
-        Email: DFA.public@gov.bc.ca
+        Email: DFA.public&#64;gov.bc.ca
       </li>
       <li>
         Telephone: 1-888-257-4777 (toll-free)
