--- a/dfa-public/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa-public/src/UI/embc-dfa/src/styles/styles.scss
@@ -3,19 +3,19 @@
 @use '@angular/material' as mat;
 @import './fonts';
 //$bcgov-font-path: "~@bcgov/bootstrap-theme/dist/fonts/";
-//@import "~@bcgov/bootstrap-theme/dist/scss/bootstrap-theme";
+//@import "@bcgov/bootstrap-theme/dist/scss/bootstrap-theme";
 @import './defaults.scss';
 @import './variables';
 
-//@import '~@bcgov/bootstrap-theme/dist/scss/common';
+//@import '@bcgov/bootstrap-theme/dist/scss/common';
 
 /* Importing Bootstrap SCSS file. */
 
 // 2024-05-24 EMCRI-21 waynezen: fixed paths changed for bootstrap?
 @import 'node_modules/bootstrap/scss/bootstrap';
 
-
-@import '@angular/material/theming';
+// 2024-07-31 EMCRI-216 waynezen; upgrade to Angular 18 - no longer need to import theming
+//@import '@angular/material/theming';
 
 // monospace font used for fixed-size text blocks (eg, referral comments)
 // NB: same font as PDF renderer service
@@ -28,12 +28,15 @@
       format('truetype'); /* Safari, Android, iOS */
 }
 
+// 2024-07-31 EMCRI-216 waynezen; upgrade to Angular 18 - no longer need?
+/*
 $custom-typography: mat.define-typography-config(
   $font-family: $font-family-sans-serif,
   $body-1: mat.define-typography-level(15px, 1.6, 400)
 );
 
 @include mat.all-component-typographies($custom-typography);
+*/
 
 main {
   padding-bottom: 0px !important;
