--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dashboard/dashboard.component.scss
@@ -101,7 +101,7 @@
 .button-p {
   @extend .button-style;
   background-color: #234075;
-  color: #ffffff;
+  color: #ffffff !important;
   float: right;
 }
 
