[EMCRI-487] Fix display for logged in user on status bar

--- a/dfa-public/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/layout/header/header.component.html
@@ -36,7 +36,7 @@
               <div class="row">
                 <div class="col-md-8">
                   <span style="color: white">
-                    <b>{{ this.lastName }}</b>
+                    <b>{{ this.firstName }}</b>
                   </span>
                 </div>
                 <div class="col-md-4">
