EMBCDFA-1274 Fix bugs after angular upgrade to 18** - Fixed the issue with showing multiple icons on different pages. - Removed the styles for icons on all the pages and moved to the global styles.scss file

--- a/dfa/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa/src/UI/embc-dfa/src/styles/styles.scss
@@ -416,3 +416,30 @@ mat-card {
 .versions-table {
   width: 100%;
 }
+
+.list-image,
+.close-image,
+.edit-image,
+.delete-image {
+  img:last-of-type {
+    display: none;
+  }
+}
+ 
+.list-image:hover,
+.close-image:hover,
+.edit-image:hover,
+.delete-image:hover {
+  img:last-of-type {
+    display: inline;
+  }
+}
+ 
+.list-image:hover,
+.close-image:hover,
+.edit-image:hover,
+.delete-image:hover {
+  img:first-of-type {
+    display: none;
+  }
+}
