[EMCRI-617] Fixes for UI after Angular upgrade

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-dashboard/dfa-project-dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-dashboard/dfa-project-dashboard.component.html
@@ -49,7 +49,7 @@
     <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
       <!--<app-alert></app-alert>-->
 
-      <nav mat-tab-nav-bar dynamicHeight>
+      <nav mat-tab-nav-bar dynamicHeight [tabPanel]="tabPanel">
         <a
           mat-tab-link
           *ngFor="let tabItem of tabs"
@@ -73,7 +73,10 @@
           &nbsp;&nbsp; {{ tabItem.label != "Profile" ? tabItem.label + " (" + tabItem.count + ")" : tabItem.label }}
         </a>
       </nav>
-      <router-outlet></router-outlet>
+      <mat-tab-nav-panel #tabPanel>
+        <router-outlet></router-outlet>
+      </mat-tab-nav-panel>
+  
       <app-loader
         class="spinner"
         [showLoader]="isLoading"
