--- a/dfa-public/src/UI/embc-dfa/src/styles/styles.scss
+++ b/dfa-public/src/UI/embc-dfa/src/styles/styles.scss
@@ -175,13 +175,13 @@ footer nav {
 }
 
 .button-style {
-  height: 55px;
-  font-weight: normal;
+  height: 45px !important;
+  font-weight: normal !important;
 }
 .button-p {
   @extend .button-style;
-  background-color: #234075;
-  color: #ffffff;
+  background: #234075 !important;
+  color: #ffffff !important;
   float: right;
 }
 
@@ -193,7 +193,7 @@ footer nav {
 }
 
 .button-p:hover {
-  background-color: #169bd5;
+  background: #169bd5 !important;
 }
 
 .button-s:hover {
