--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-dashboard/dfa-project-dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-project-dashboard/dfa-project-dashboard.component.scss
@@ -27,9 +27,12 @@
 
 .appDetailHeader {
   background: #F6F9FC 0% 0% no-repeat padding-box;
-  border: 1px solid #003366;
-  padding: 10px;
+  padding: 25px;
   margin-top: 10px;
+  -webkit-box-shadow: 3px 0 5px #003366;
+  -moz-box-shadow: 3px 0 5px #003366;
+  box-shadow: 3px 0 5px #003366;
+  line-height: 25px;
 }
 
 .infoIconStyle {
