claim/invoice angular upgrade issues partial commit

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-main/dfa-claim-main.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-main/dfa-claim-main.component.html
@@ -10,7 +10,7 @@
         #backtodash
         id="backtodash"
         class="button-p nextNsave col-4"
-        style="height: 40px !important; vertical-align: middle; width: 220px; margin-top: 15px"
+        style="vertical-align: middle; width: 220px; margin-top: 15px"
         (click)="BackToDashboard()"
         mat-stroked-button
         type="button"
