--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-dashboard/dfa-claim-dashboard.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-dashboard/dfa-claim-dashboard.component.html
@@ -46,7 +46,7 @@
     <div class="container" style="padding-bottom: 100px; padding-top: 30px;">
       <!--<app-alert></app-alert>-->
 
-      <nav mat-tab-nav-bar dynamicHeight>
+      <nav mat-tab-nav-bar dynamicHeight [tabPanel]="tabPanel" class="tabWidth">
         <a
           mat-tab-link
           *ngFor="let tabItem of tabs"
@@ -70,7 +70,9 @@
           &nbsp;&nbsp; {{ tabItem.label != "Profile" ? tabItem.label + " (" + tabItem.count + ")" : tabItem.label }}
         </a>
       </nav>
-      <router-outlet></router-outlet>
+      <mat-tab-nav-panel #tabPanel>
+        <router-outlet></router-outlet>
+      </mat-tab-nav-panel>
       <app-loader
         class="spinner"
         [showLoader]="isLoading"
