--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-dashboard/dfa-claim-dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/dfa-claim-dashboard/dfa-claim-dashboard.component.scss
@@ -25,13 +25,18 @@
   margin-top: 10px;
 }
 
+.heading-container {
+  line-height: 40px;
+}
+
 .appDetailHeader {
   background: #F6F9FC 0% 0% no-repeat padding-box;
-  padding: 10px;
+  padding: 25px;
   margin-top: 10px;
-  -webkit-box-shadow: 0 0 3px #003366;
-  -moz-box-shadow: 0 0 3px #003366;
-  box-shadow: 0 0 3px #003366;
+  -webkit-box-shadow: 3px 0 5px #003366;
+  -moz-box-shadow: 3px 0 5px #003366;
+  box-shadow: 3px 0 5px #003366;
+  line-height: 25px;
 }
 
 .infoIconStyle {
@@ -108,6 +113,10 @@
 .tabHead {
   font-size: 20px;
   padding: 0 50px 0 50px;
+}
+
+.tabWidth{
+    width: fit-content;
 }
 
 .spinner {
