--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/claim-dashboard-components/claim/claim.component.scss
@@ -4,7 +4,7 @@
 
 .content {
   margin: 10px 0px;
-  padding: 18px;
+  padding: 25px 18px;
   min-width: 900px;
 }
 
@@ -21,7 +21,7 @@
   font-size: 15px;
   padding-left: 16px;
   padding-right: 16px;
-  max-width: 200px;
+  /*max-width: 200px;*/
   margin-left: 2%;
   font-weight: bold;
   border: 1px solid #003366 !important;
@@ -101,12 +101,12 @@ i.material-icons {
 
 .no-project {
   background: #F6F9FC 0% 0% no-repeat padding-box;
-  padding-bottom: 50px;
-  padding-top: 50px;
+  padding-bottom: 75px;
+  padding-top: 75px;
   border: 1px dashed grey;
   display: flex;
   justify-content: center;
-  margin-top: -50px;
+  margin-top: -75px;
 }
 
 .labelStyle {
