--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/dfa-invoice-dashboard/dfa-invoice-dashboard.component.scss
@@ -19,10 +19,10 @@
 
 .add-invoice-button {
   color: #003366 !important;
-  font-weight: bold;
-  height: 35px;
+  font-weight: bold !important;
+  height: 35px !important;
   border-radius: 5px !important;
-  margin-top: -23px;
+  margin-top: -26px;
   position: absolute;
   border: 1px solid #003366 !important;
   line-height: 25px !important;
@@ -41,12 +41,12 @@ table {
   box-shadow: none;
 }
 
-tr.mat-header-row {
+tr.mat-mdc-header-row {
   background: #38598A 0% 0% no-repeat !important;
 }
 
-th.mat-header-cell {
-    color: white;
+th.mat-mdc-header-cell {
+  color: white;
 }
 
 .mat-table {
