--- a/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/supporting-documents-claim/supporting-documents-claim.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/sharedModules/forms/dfa-claim-main-forms/supporting-documents-claim/supporting-documents-claim.component.scss
@@ -17,6 +17,13 @@ mat-form-field {
     color: #169bd5;
 }
 
+.align-card-left {
+  margin-left: 0px;
+}
+
+.sub-heading {
+  margin: 10px 10px 10px 0 !important;
+}
 
 .infoText {
   background: #F6F9FC 0% 0% no-repeat padding-box;
