--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/address-change-dialog/address-change-dialog.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/address-change-dialog/address-change-dialog.component.html
@@ -1,4 +1,4 @@
-<h2><b><span style="color:red;">BC Services Card Address Change</span></b></h2>
+<h2 style="text-align: center; padding-top: 12px;"><b><span style="color:red;">BC Services Card Address Change</span></b></h2>
 
 <mat-dialog-content>
   <div class="row">
