--- a/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-prescreening-dialog/dfa-confirm-prescreening-dialog.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-prescreening-dialog/dfa-confirm-prescreening-dialog.component.html
@@ -1,4 +1,4 @@
-<h2><b>Submit Application Confirmation</b></h2>
+<h2 style="text-align: center; padding-top: 12px;"><b>Submit Application Confirmation</b></h2>
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content.text"></div>
@@ -12,7 +12,7 @@
   </div>
 </mat-dialog-content>
 
-<mat-dialog-actions>
+<mat-dialog-actions style="display: flex; gap:12px;">
   <div class="col-md-6">
     <button class="button-s button-width" mat-button (click)="cancel()">
      {{content.cancelButton}}
