--- a/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-events/dfa-events.component.html
+++ b/dfa/src/UI/embc-dfa/src/app/sharedModules/dashboard-components/dfa-events/dfa-events.component.html
@@ -6,7 +6,7 @@
     <br />You must submit an application within 90 days of the disaster event.
   </div>
   <div class="row" *ngFor="let eventItem of openDisasterEvents">
-    <mat-card appearance="outlined" class="mat-elevation-z4 content" style="padding-bottom: 20px; padding-top: 20px;">
+    <mat-card appearance="outlined" class="mat-elevation-z4 content" style="margin: 10px; padding: 20px;">
       <div class="row">
         <div class="col-4">
           <span><b>Event Name:</b>&nbsp;&nbsp;{{eventItem.eventName == null ? "To Be Assigned" : eventItem.eventName }}</span>
