EMCRI-618 - partial commit for angular upgrade ui fixes

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-claim/review-claim.component.html
@@ -2,8 +2,9 @@
   <ng-container *ngTemplateOutlet="dfaClaimMain"></ng-container>
   <ng-template #dfaClaimMain>
     <div>
-      <p class="sub-heading" style="font-size: 20px">Review</p>
-       <p>
+      <br />
+      <p class="sub-heading align-left" style="font-size: 20px">Review</p>
+       <p class="align-left">
         Please check that your project information is correct before submitting. Missing required fields marked in red.
       </p>
 
@@ -110,7 +111,7 @@
         </div>
         
       </mat-card-content>
-
+      <br />
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row justify-content-between">
           <div class="col-md-6 card-heading">Invoices</div>
@@ -181,7 +182,7 @@
         </div>
         <br />
       </mat-card-content>
-
+      <br />
       <mat-card-content class="contentStyle mat-elevation-z8">
         <div class="row justify-content-between">
           <div class="col-md-6 card-heading">Supporting Documents</div>
@@ -274,7 +275,7 @@
           </ng-container>
 
           <!-- Description Column -->
-          <ng-container matColumnDef="fileDescription" style="width:25%">
+          <ng-container matColumnDef="fileDescription" style="width:45%">
             <th mat-header-cell *matHeaderCellDef>
               <b>File Description</b>
             </th>
@@ -284,7 +285,7 @@
           </ng-container>
 
           <!-- Type Column -->
-          <ng-container matColumnDef="fileTypeText" style="width:25%">
+          <ng-container matColumnDef="fileTypeText" style="width:20%">
             <th mat-header-cell *matHeaderCellDef>
               <b>File Type</b>
             </th>
@@ -294,7 +295,7 @@
           </ng-container>
 
           <!-- UploadedDate Column -->
-          <ng-container matColumnDef="uploadedDate" style="width:25%">
+          <ng-container matColumnDef="uploadedDate" style="width:10%">
             <th mat-header-cell *matHeaderCellDef>
               <b>Date Uploaded</b>
             </th>
