--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-claim-create-dialog/dfa-confirm-claim-create-dialog.component.scss
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-claim-create-dialog/dfa-confirm-claim-create-dialog.component.scss
@@ -9,9 +9,13 @@ h1 {
     font-size: 33px;
 }
 
+.h-margin {
+    margin: 20px;
+}
+
 .text-margin {
-    margin-top: 20px;
-    margin-bottom: 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .p-margin {
@@ -28,7 +32,7 @@ h1 {
 }
 
 .button-width {
-    width: 100%;
-    margin-bottom: 10px;
+    width: 95%;
+    margin: 10px;
     height: 80px;
 }
