--- a/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-project-create-dialog/dfa-confirm-project-create-dialog.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/core/components/dialog-components/dfa-confirm-project-create-dialog/dfa-confirm-project-create-dialog.component.html
@@ -1,4 +1,4 @@
-<h2><b>Create Project Confirmation</b></h2>
+<h2 class="h-margin"><b>Create Project Confirmation</b></h2>
 
 <mat-dialog-content>
   <div class="col-md-12" [innerHTML]="content.text"></div>
