[EMCRI-617] Fix for UI after Angular upgrade (double edit icon displayed)

--- a/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-project/review-project.component.html
+++ b/dfa-public/src/UI/embc-dfa/src/app/feature-components/review-project/review-project.component.html
@@ -29,11 +29,7 @@
               (click)="navigateToStep(0)"
             >
               <img src="/assets/images/edit.svg" height="35" width="35" />
-              <img
-                src="/assets/images/edit_onhover.svg"
-                height="35"
-                width="35"
-              />
+              <!-- 2024-08-26 EMCRI-617 waynezen; UI fixes for Angular upgrade -->
             </button>
           </div>
         </div>
@@ -250,11 +246,7 @@
               (click)="navigateToStep(1)"
             >
               <img src="/assets/images/edit.svg" height="35" width="35" />
-              <img
-                src="/assets/images/edit_onhover.svg"
-                height="35"
-                width="35"
-              />
+              <!-- 2024-08-26 EMCRI-617 waynezen; UI fixes for Angular upgrade -->
             </button>
           </div>
         </div>
